--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
      manifest.json provides metadata used when your web app is installed on a
      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
    -->
-        <title>BST Visualiser</title>
+        <title>BST Visualizer</title>
     </head>
     <body style="scroll-behavior: smooth; overflow-x: hidden; margin: 0; padding: 0; background-color:#09090c;">
         <noscript>You need to enable JavaScript to run this app.</noscript>
